--- a/package.json
+++ b/package.json
@@ -10,45 +10,31 @@
     "build": "cross-env NODE_ENV=production webpack",
     "webpack": "webpack --watch",
     "inspect": "node --inspect-brk ./build/index.js",
-    "tsc": "tsc",
-    "test": "mocha",
-    "test-babel": "mocha --require @babel/register",
-    "test-brk": "mocha --inspect-brk",
     "pkg": "pkg package.json"
   },
   "pkg": {
     "scripts": "build/index.js",
-    "outputPath": "dist"
+    "outputPath": "dist",
+    "targets": [
+      "node18-macos-x64",
+      "node18-win-x64"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.24.0",
     "pkg": "^5.8.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.24.0",
-    "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-typescript": "^7.23.3",
-    "@babel/register": "^7.23.7",
-    "@types/chai": "^4.3.12",
-    "@types/chai-as-promised": "^7.1.8",
-    "@types/node": "^20.11.27",
+    "@babel/core": "^7.24.5",
+    "@types/node": "^20.12.12",
     "babel-loader": "^9.1.3",
-    "chai": "^5.1.0",
-    "chai-as-promised": "^7.1.1",
     "cross-env": "^7.0.3",
-    "mocha": "^10.3.0",
-    "mocha-clean": "^1.0.0",
-    "rewire": "^7.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2",
-    "webpack": "^5.90.3",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
   }
